Shop tab added. Trying to fix price not showing correctly

--- a/TP2.css
+++ b/TP2.css
@@ -10,9 +10,58 @@ h1{
     margin-top: 20%;
     width: 500px;
     height: 500px;
-    display: inline-table;
+    display: inline;
     border-radius: 15%;
 
+}
+.NekoToken{
+
+    color: yellow;
+    font-size: 40PX;
+    margin-left: 70%;
+    margin-top: 0%;
+    
+    display: inline;
+
+    
+}
+.Shop{
+
+    background-color: rgba(0, 0, 0, 0.63);
+    margin: 0 auto;
+    margin-top: 10%;
+    width: 70%;
+    height: auto;
+}
+.Item{
+
+    background-color: pink;
+    opacity: 100%;
+    width: 300px;
+    height: 300px;
+    margin: 2.2%;
+    display: inline-block;
+    border-radius: 10%;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: 200px;
+    vertical-align: top;
+
+    text-align: top;
+    text-align: center;
+    color: rgb(0, 255, 242);
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-size: 40px;
+    
+}
+img{
+    
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    margin-top: 10%;
+    
 }
 .NyanCat{
 
